src/components/styles.css
#loader {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.navbarPaper {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  height: 60px;
  width: auto;
  padding-top: 10px;
  padding-bottom: 10px;
  padding-left: 30px;
  padding-right: 30px;
}

.navbarItem {
  width: 200px;
}
.navbarSearch {
  width: 50em;
}

.right {
  float: right;
  padding-left: 1000;
}

.carouselImg {
  height: 54vh;
  object-fit: cover;
  width: auto;
  margin-left: auto;
  margin-right: auto;
  border-radius: 25px;
}
.carouselWidth {
  border-radius: 25px;
  margin-left: 50px;
  margin-right: 50px;
  margin-top: 20px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.redeem {
  text-align: center;
  color: rgb(47, 0, 255);
}

*.card :focus {
  outline: none;
}

.card {
  height: auto;
  width: 40vh;
  margin: 50px;
}



.cardImg {
  height: auto;
}

